--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,2 @@
 eclipse.preferences.version=1
-encoding//src-client/gui/MedicInterface.java=UTF-8
-encoding//src/database/PostgreSQL.java=UTF-8
+encoding/<project>=UTF-8
