--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src-server"/>
 	<classpathentry kind="src" path="src-client"/>
+	<classpathentry kind="src" path="src-common"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="lib" path="src-server/database/postgresql-42.1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
