--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,9 @@
 	<classpathentry kind="src" path="src-server"/>
 	<classpathentry kind="src" path="src-client"/>
 	<classpathentry kind="src" path="src-common"/>
+	<classpathentry kind="src" path="JunitTest"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="postgresql-42.1.4.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
